@@ -80,6 +80,7 @@ NEWS
   * [mod_indexfile] save physical path to env (fixes #448, #892)
   * [core] open fd when appending file to cq (fixes #2655)
   * [config] server.listen-backlog option (fixes #1825, #2116)
+  * [core] retry tempdirs on partial write, ENOSPC (fixes #2588)
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
